force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.BillingState &amp;  Account.BillingCity &amp;  Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業住所</label>
    <type>Text</type>
</CustomField>