force-app/main/default/objects/Contact/fields/AdInterest__c.field-meta.xml
<CustomField>
    <fullName>AdInterest__c</fullName>
    <label>関心事（広告）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>デジタル広告（東洋経済オンライン、会社四季報オンライン）</fullName>
            </value>
            <value>
                <fullName>雑誌広告（週刊東洋経済、会社四季報）</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>カスタム出版</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>