force-app/main/default/objects/Contact/fields/BirthYear__c.field-meta.xml
<CustomField>
    <fullName>BirthYear__c</fullName>
    <description>西暦の年が設定</description>
    <label>生年月日(年)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>