force-app/main/default/objects/Contact/fields/BizCardExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>BizCardExchangeDate__c</fullName>
    <description>Sansan Salesforce連携項目</description>
    <inlineHelpText>Sansan Salesforce連携項目</inlineHelpText>
    <label>名刺交換日</label>
    <type>Date</type>
</CustomField>