force-app/main/default/objects/Contact/fields/BizCardId__c.field-meta.xml
<CustomField>
    <fullName>BizCardId__c</fullName>
    <description>Sansan Salesforce連携項目</description>
    <inlineHelpText>Sansan Salesforce連携項目</inlineHelpText>
    <label>名刺ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>