force-app/main/default/objects/Contact/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>キャンペーンID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>