force-app/main/default/objects/Contact/fields/CorpName__c.field-meta.xml
<CustomField>
    <fullName>CorpName__c</fullName>
    <label>法人名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>