force-app/main/default/objects/Contact/fields/DbsCorpType__c.field-meta.xml
<CustomField>
    <fullName>DbsCorpType__c</fullName>
    <label>法人種別（DBメルマガ）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法人</fullName>
            </value>
            <value>
                <fullName>学校法人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>