force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>リードからの連携用項目</description>
    <label>部署（連携用）</label>
    <length>80</length>
    <type>Text</type>
</CustomField>