force-app/main/default/objects/Contact/fields/EbisuBeforeLastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>EbisuBeforeLastLoginDate__c</fullName>
    <label>えびす前回ログイン時刻</label>
    <type>DateTime</type>
</CustomField>