force-app/main/default/objects/Contact/fields/EbisuCompanyName__c.field-meta.xml
<CustomField>
    <fullName>EbisuCompanyName__c</fullName>
    <label>えびす法人名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>