force-app/main/default/objects/Contact/fields/EbisuCorpEmail__c.field-meta.xml
<CustomField>
    <fullName>EbisuCorpEmail__c</fullName>
    <label>えびす 法人メールアドレス</label>
    <length>200</length>
    <type>Text</type>
</CustomField>