force-app/main/default/objects/Contact/fields/EbisuCorpName__c.field-meta.xml
<CustomField>
    <fullName>EbisuCorpName__c</fullName>
    <label>えびす 法人名称(法人会員)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>