force-app/main/default/objects/Contact/fields/EbisuCorpNameKana__c.field-meta.xml
<CustomField>
    <fullName>EbisuCorpNameKana__c</fullName>
    <label>えびす 法人名称(カナ)(法人会員)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>