force-app/main/default/objects/Contact/fields/EbisuCorpSite__c.field-meta.xml
<CustomField>
    <fullName>EbisuCorpSite__c</fullName>
    <label>えびす 部署名称(法人会員)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>