force-app/main/default/objects/Contact/fields/EbisuDepartment__c.field-meta.xml
<CustomField>
    <fullName>EbisuDepartment__c</fullName>
    <label>えびす部署</label>
    <length>100</length>
    <type>Text</type>
</CustomField>