force-app/main/default/objects/Contact/fields/EbisuFirstName__c.field-meta.xml
<CustomField>
    <fullName>EbisuFirstName__c</fullName>
    <label>えびす名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>