force-app/main/default/objects/Contact/fields/EbisuFirstNameKana__c.field-meta.xml
<CustomField>
    <fullName>EbisuFirstNameKana__c</fullName>
    <label>えびす会員名（カナ）</label>
    <length>200</length>
    <type>Text</type>
</CustomField>