force-app/main/default/objects/Contact/fields/EbisuHouseholdIncome__c.field-meta.xml
<CustomField>
    <fullName>EbisuHouseholdIncome__c</fullName>
    <label>えびす世帯年収</label>
    <length>100</length>
    <type>Text</type>
</CustomField>