force-app/main/default/objects/Contact/fields/EbisuInterest__c.field-meta.xml
<CustomField>
    <fullName>EbisuInterest__c</fullName>
    <label>えびす興味・関心</label>
    <length>255</length>
    <type>Text</type>
</CustomField>