force-app/main/default/objects/Contact/fields/EbisuJob__c.field-meta.xml
<CustomField>
    <fullName>EbisuJob__c</fullName>
    <label>えびす職業</label>
    <length>100</length>
    <type>Text</type>
</CustomField>