force-app/main/default/objects/Contact/fields/EbisuLastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>EbisuLastLoginDate__c</fullName>
    <label>えびす最終ログイン日時</label>
    <type>DateTime</type>
</CustomField>