force-app/main/default/objects/Contact/fields/EbisuLastNameKana__c.field-meta.xml
<CustomField>
    <fullName>EbisuLastNameKana__c</fullName>
    <label>えびす会員姓（カナ）</label>
    <length>200</length>
    <type>Text</type>
</CustomField>