force-app/main/default/objects/Contact/fields/EbisuLoginId__c.field-meta.xml
<CustomField>
    <fullName>EbisuLoginId__c</fullName>
    <description>現行が2000文字まで受け付ける型なので差異あり</description>
    <label>えびすログインID</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>