force-app/main/default/objects/Contact/fields/EbisuLoginIdType__c.field-meta.xml
<CustomField>
    <fullName>EbisuLoginIdType__c</fullName>
    <description>P:メールアドレス（標準設定）、E:任意のログインID</description>
    <label>えびすログインIDタイプ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>