force-app/main/default/objects/Contact/fields/EbisuMailingCity__c.field-meta.xml
<CustomField>
    <fullName>EbisuMailingCity__c</fullName>
    <label>えびす市区郡</label>
    <length>100</length>
    <type>Text</type>
</CustomField>