force-app/main/default/objects/Contact/fields/EbisuMailingState__c.field-meta.xml
<CustomField>
    <fullName>EbisuMailingState__c</fullName>
    <label>えびす都道府県</label>
    <length>100</length>
    <type>Text</type>
</CustomField>