force-app/main/default/objects/Contact/fields/EbisuMemberRank__c.field-meta.xml
<CustomField>
    <fullName>EbisuMemberRank__c</fullName>
    <description>99:東洋経済関係者</description>
    <label>えびす会員ランク</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>