force-app/main/default/objects/Contact/fields/EbisuMemberType__c.field-meta.xml
<CustomField>
    <fullName>EbisuMemberType__c</fullName>
    <description>00:個人,10:法人</description>
    <label>えびす会員区分</label>
    <length>2</length>
    <type>Text</type>
</CustomField>