force-app/main/default/objects/Contact/fields/EbisuModifyDate__c.field-meta.xml
<CustomField>
    <fullName>EbisuModifyDate__c</fullName>
    <label>えびす更新日時</label>
    <type>DateTime</type>
</CustomField>