force-app/main/default/objects/Contact/fields/EbisuOccupation__c.field-meta.xml
<CustomField>
    <fullName>EbisuOccupation__c</fullName>
    <label>えびす職種</label>
    <length>100</length>
    <type>Text</type>
</CustomField>