force-app/main/default/objects/Contact/fields/EbisuTitle__c.field-meta.xml
<CustomField>
    <fullName>EbisuTitle__c</fullName>
    <label>えびす役職</label>
    <length>128</length>
    <type>Text</type>
</CustomField>