force-app/main/default/objects/Contact/fields/EbisuUseType__c.field-meta.xml
<CustomField>
    <fullName>EbisuUseType__c</fullName>
    <description>1:個人として利用,2:法人内業務として利用。四季報オンラインのリアルタイムオプションの制御で利用</description>
    <label>えびす利用形態</label>
    <length>1</length>
    <type>Text</type>
</CustomField>