force-app/main/default/objects/Contact/fields/FlgAdMail__c.field-meta.xml
<CustomField>
    <fullName>FlgAdMail__c</fullName>
    <label>広告メールマガジン</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>