force-app/main/default/objects/Contact/fields/FlgBkList__c.field-meta.xml
<CustomField>
    <fullName>FlgBkList__c</fullName>
    <description>&quot;x&quot; or null</description>
    <label>ブラックリストフラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>