force-app/main/default/objects/Contact/fields/FlgBookstoreMail__c.field-meta.xml
<CustomField>
    <fullName>FlgBookstoreMail__c</fullName>
    <label>書店向けメールマガジン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>