force-app/main/default/objects/Contact/fields/FlgNotAgreeShikiho__c.field-meta.xml
<CustomField>
    <fullName>FlgNotAgreeShikiho__c</fullName>
    <label>未同意フラグ（会社四季報）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>