force-app/main/default/objects/Contact/fields/FlgTkolMail__c.field-meta.xml
<CustomField>
    <fullName>FlgTkolMail__c</fullName>
    <label>東洋経済オンラインメルマガ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>