force-app/main/default/objects/Contact/fields/FlgTokeiMail__c.field-meta.xml
<CustomField>
    <fullName>FlgTokeiMail__c</fullName>
    <label>東洋経済メール</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>