force-app/main/default/objects/Contact/fields/FormUrl__c.field-meta.xml
<CustomField>
    <fullName>FormUrl__c</fullName>
    <label>フォームURL</label>
    <type>Url</type>
</CustomField>