force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>業種/職業</label>
    <length>100</length>
    <type>Text</type>
</CustomField>