force-app/main/default/objects/Contact/fields/KokyakuAddress__c.field-meta.xml
<CustomField>
    <fullName>KokyakuAddress__c</fullName>
    <label>個客番 住所</label>
    <length>150</length>
    <type>Text</type>
</CustomField>