force-app/main/default/objects/Contact/fields/KokyakuCorpName__c.field-meta.xml
<CustomField>
    <fullName>KokyakuCorpName__c</fullName>
    <label>個客番法人名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>