force-app/main/default/objects/Contact/fields/KokyakuDmNg__c.field-meta.xml
<CustomField>
    <fullName>KokyakuDmNg__c</fullName>
    <label>個客番 DM拒否</label>
    <length>20</length>
    <type>Text</type>
</CustomField>