force-app/main/default/objects/Contact/fields/KokyakuFirstName__c.field-meta.xml
<CustomField>
    <fullName>KokyakuFirstName__c</fullName>
    <label>個客番名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>