force-app/main/default/objects/Contact/fields/KokyakuHomePhone__c.field-meta.xml
<CustomField>
    <fullName>KokyakuHomePhone__c</fullName>
    <label>個客番電話</label>
    <type>Phone</type>
</CustomField>