force-app/main/default/objects/Contact/fields/KokyakuLastName__c.field-meta.xml
<CustomField>
    <fullName>KokyakuLastName__c</fullName>
    <label>個客番姓</label>
    <length>100</length>
    <type>Text</type>
</CustomField>