force-app/main/default/objects/Contact/fields/KokyakuLastNameKana__c.field-meta.xml
<CustomField>
    <fullName>KokyakuLastNameKana__c</fullName>
    <label>個客番会員姓（カナ）</label>
    <length>200</length>
    <type>Text</type>
</CustomField>