force-app/main/default/objects/Contact/fields/KokyakuModifyAttr__c.field-meta.xml
<CustomField>
    <fullName>KokyakuModifyAttr__c</fullName>
    <label>個客番 属性更新</label>
    <length>8</length>
    <type>Text</type>
</CustomField>