force-app/main/default/objects/Contact/fields/KokyakuOccuCode__c.field-meta.xml
<CustomField>
    <fullName>KokyakuOccuCode__c</fullName>
    <label>個客番 職種コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>