force-app/main/default/objects/Contact/fields/KokyakuPostalCode__c.field-meta.xml
<CustomField>
    <fullName>KokyakuPostalCode__c</fullName>
    <label>個客番郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>