force-app/main/default/objects/Contact/fields/KokyakuResistDate__c.field-meta.xml
<CustomField>
    <fullName>KokyakuResistDate__c</fullName>
    <description>元情報が日付の型にはまらないためテキスト型とする</description>
    <label>個客番 新規登録年月日</label>
    <length>8</length>
    <type>Text</type>
</CustomField>