force-app/main/default/objects/Contact/fields/KokyakuTitleCode__c.field-meta.xml
<CustomField>
    <fullName>KokyakuTitleCode__c</fullName>
    <label>個客番 役職コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>