force-app/main/default/objects/Contact/fields/LastNameKana__c.field-meta.xml
<CustomField>
    <fullName>LastNameKana__c</fullName>
    <label>会員姓（カナ）</label>
    <length>200</length>
    <type>Text</type>
</CustomField>