force-app/main/default/objects/Contact/fields/LeadCode__c.field-meta.xml
<CustomField>
    <fullName>LeadCode__c</fullName>
    <externalId>true</externalId>
    <label>読者コード</label>
    <length>11</length>
    <type>Text</type>
</CustomField>