force-app/main/default/objects/Contact/fields/MailCheck__c.field-meta.xml
<CustomField>
    <fullName>MailCheck__c</fullName>
    <description>個人取引先【メール(外部ID)セット】のワークフローの異常を検知するレポート用</description>
    <formula>IF( Email = MailExternalIdCopy__c ,0,1)</formula>
    <label>メール一致検証用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>