force-app/main/default/objects/Contact/fields/MailExternalIdCopy__c.field-meta.xml
<CustomField>
    <fullName>MailExternalIdCopy__c</fullName>
    <description>個人取引先【メール(外部ID)セット】のワークフローの異常を検知するレポート用</description>
    <formula>Account.MailExternalId__c</formula>
    <label>メール（外部ID)参照用</label>
    <type>Text</type>
</CustomField>