force-app/main/default/objects/Contact/fields/MarketoFormLastNameKana__c.field-meta.xml
<CustomField>
    <fullName>MarketoFormLastNameKana__c</fullName>
    <description>Marketoフォーム用カナ（姓）</description>
    <label>Marketoフォーム用カナ（姓）</label>
    <length>200</length>
    <type>Text</type>
</CustomField>