force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Date__c</fullName>
    <label>Marketo取得日</label>
    <type>DateTime</type>
</CustomField>