force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program__c</fullName>
    <label>Marketo新規顧客獲得プログラム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>