force-app/main/default/objects/Contact/fields/mkto71_Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Country__c</fullName>
    <label>Marketo推測される国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>