force-app/main/default/objects/Contact/fields/mkto71_Inferred_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
    <label>Marketo推測される市外局番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>