force-app/main/default/objects/Contact/fields/mkto71_Original_Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Phrase__c</fullName>
    <label>Marketo参照元検索フレーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>