force-app/main/default/objects/Contact/fields/mktoLeadScoreAd__c.field-meta.xml
<CustomField>
    <fullName>mktoLeadScoreAd__c</fullName>
    <label>リードスコア-広告</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>