force-app/main/default/objects/Contact/fields/mktoLeadScoreDBS__c.field-meta.xml
<CustomField>
    <fullName>mktoLeadScoreDBS__c</fullName>
    <label>リードスコア-DBS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>